securityContext:             capabilities:               drop:                 - ALL

--- a/k8s-deployment-dev.yaml
+++ b/k8s-deployment-dev.yaml
@@ -49,6 +49,10 @@ spec:
               port: http
           resources:
             {}
+          securityContext:
+            capabilities:
+              drop:
+                - ALL
         - name: snyky2
           image: "garethr/snyky2:latest"
           imagePullPolicy: IfNotPresent
