--- a/k8s-deployment-dev.yaml
+++ b/k8s-deployment-dev.yaml
@@ -79,8 +79,8 @@ spec:
             runAsUser: 1
             privileged: false
             capabilities:
-              # drop:
-                # - all
+              drop:
+                - all
               add:
                 - CAP_SYS_ADMIN
       volumes:
